[gd_scene load_steps=20 format=2]

[ext_resource path="res://interface/themes/grey_theme.tres" type="Theme" id=1]
[ext_resource path="res://map/Map.gd" type="Script" id=2]
[ext_resource path="res://map/PlaylistItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://map/Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://map/MapPlanet.tscn" type="PackedScene" id=5]
[ext_resource path="res://map/planets/SoloDeath.tres" type="Resource" id=6]
[ext_resource path="res://map/planets/Megacrown.tres" type="Resource" id=7]
[ext_resource path="res://map/planets/SoloSnatch.tres" type="Resource" id=8]
[ext_resource path="res://map/planets/SoloFlag.tres" type="Resource" id=9]
[ext_resource path="res://map/Waypoint.tscn" type="PackedScene" id=10]
[ext_resource path="res://combat/levels/background/robolords_background.png" type="Texture" id=11]
[ext_resource path="res://utils/Camera.tscn" type="PackedScene" id=12]
[ext_resource path="res://map/MapPlanetFont.tres" type="DynamicFont" id=13]
[ext_resource path="res://map/ModeMini.tscn" type="PackedScene" id=14]
[ext_resource path="res://combat/modes/TakeTheCrown.tres" type="Resource" id=15]
[ext_resource path="res://combat/modes/KingOfTheHill.tres" type="Resource" id=16]
[ext_resource path="res://combat/modes/Deathmatch.tres" type="Resource" id=17]
[ext_resource path="res://combat/modes/Conquest.tres" type="Resource" id=18]
[ext_resource path="res://combat/modes/Collect.tres" type="Resource" id=19]

[node name="Map" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
playlist_item = ExtResource( 3 )
cursor_scene = ExtResource( 4 )

[node name="Content" type="Node2D" parent="."]
pause_mode = 2

[node name="Planets" type="Node2D" parent="Content"]
__meta__ = {
"_edit_lock_": true
}

[node name="Deathmatch" parent="Content/Planets" instance=ExtResource( 5 )]
position = Vector2( -400, 0 )
planet = ExtResource( 6 )

[node name="TakeTheCrown" parent="Content/Planets" instance=ExtResource( 5 )]
position = Vector2( 0, -400 )
planet = ExtResource( 7 )

[node name="Diamondsnatch" parent="Content/Planets" instance=ExtResource( 5 )]
position = Vector2( 400, 0 )
planet = ExtResource( 8 )

[node name="HiveFilling" parent="Content/Planets" instance=ExtResource( 5 )]
position = Vector2( 0, 400 )
planet = ExtResource( 9 )

[node name="Waypoints" type="Node2D" parent="Content"]

[node name="Waypoint" parent="Content/Waypoints" instance=ExtResource( 10 )]

[node name="Waypoint2" parent="Content/Waypoints" instance=ExtResource( 10 )]
position = Vector2( -400, 400 )

[node name="Waypoint3" parent="Content/Waypoints" instance=ExtResource( 10 )]
position = Vector2( 400, 400 )

[node name="Waypoint4" parent="Content/Waypoints" instance=ExtResource( 10 )]
position = Vector2( 400, -400 )

[node name="Waypoint5" parent="Content/Waypoints" instance=ExtResource( 10 )]
position = Vector2( -400, -400 )

[node name="CursorMoveTween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Sprite" parent="CanvasLayer"]
texture = ExtResource( 11 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" parent="." instance=ExtResource( 12 )]
marginX = -320
marginY = 0.0
zoom_offset = 1.574

[node name="CanvasLayerTop" type="CanvasLayer" parent="."]
layer = 2

[node name="HUD" type="Panel" parent="CanvasLayerTop"]
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 961.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="Intro" type="Label" parent="CanvasLayerTop/HUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -159.5
margin_top = 6.0
margin_right = 159.5
margin_bottom = 35.0
custom_fonts/font = ExtResource( 13 )
text = "Choose up to X planets"
align = 1
valign = 1

[node name="Items" type="VBoxContainer" parent="CanvasLayerTop/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 47.0
margin_right = 1.0
margin_bottom = -289.0
grow_horizontal = 2
grow_vertical = 2

[node name="Legend" type="VBoxContainer" parent="CanvasLayerTop/HUD"]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -159.5
margin_top = -283.0
margin_right = 159.5
margin_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayerTop/HUD/Legend"]
margin_right = 319.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 13 )
text = "Legend"
align = 1
valign = 1

[node name="Mode" parent="CanvasLayerTop/HUD/Legend" instance=ExtResource( 14 )]
margin_top = 33.0
margin_bottom = 62.0
mode = ExtResource( 15 )

[node name="Mode2" parent="CanvasLayerTop/HUD/Legend" instance=ExtResource( 14 )]
margin_top = 66.0
margin_bottom = 95.0
mode = ExtResource( 16 )

[node name="Mode3" parent="CanvasLayerTop/HUD/Legend" instance=ExtResource( 14 )]
margin_top = 99.0
margin_bottom = 128.0
mode = ExtResource( 17 )

[node name="Mode4" parent="CanvasLayerTop/HUD/Legend" instance=ExtResource( 14 )]
margin_top = 132.0
margin_bottom = 161.0
mode = ExtResource( 18 )

[node name="Mode5" parent="CanvasLayerTop/HUD/Legend" instance=ExtResource( 14 )]
margin_top = 165.0
margin_bottom = 194.0
mode = ExtResource( 19 )

[node name="GameStart" type="HBoxContainer" parent="CanvasLayerTop/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -146.0
margin_top = -65.0
margin_right = 146.0

[node name="Intro" type="Label" parent="CanvasLayerTop/HUD/GameStart"]
margin_top = 23.0
margin_right = 136.0
margin_bottom = 41.0
text = "Match will start in "

[node name="Tot" type="Label" parent="CanvasLayerTop/HUD/GameStart"]
margin_left = 140.0
margin_top = 23.0
margin_right = 140.0
margin_bottom = 41.0

[node name="Seconds" type="Label" parent="CanvasLayerTop/HUD/GameStart"]
margin_left = 144.0
margin_top = 23.0
margin_right = 207.0
margin_bottom = 41.0
text = "Seconds"

[node name="Timer" type="Timer" parent="CanvasLayerTop"]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="CanvasLayerTop/Timer" to="." method="_on_Timer_timeout"]
